# magic-products-distribution-service

./: .gitignore  CHANGELOG.md  README.md  bas_metadata_library-0.0.0-py3-none-any.whl  pyproject.toml  schema.json  test-artefact.sketch  test-artefact.txt  test-chain.py  test-lookup.py  test-record.json  test-record.py  test-upload.py
provisioning/terraform/: .terraform.lock.hcl  docker-compose.yml  terraform.tf
test-records/manual-testing/: 01-alias.json  02-object-id.json
