[tool.poetry]
name = "bas-magic-products-distribution"
version = "0.1.0"
description = "Tools for distributing product resources within the BAS Mapping and Geographic Information Centre (MAGIC)"
authors = ["Felix Fennell <felnne@bas.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
msal = "^1.17.0"
quickxorhash = "^1.0.5"
requests-auth-aws-sigv4 = "^0.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = ''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
